--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,16 @@
   src: local('Roboto Condensed Regular'), local('RobotoCondensed-Regular'), url(assets/RobotoCondensed.woff) format('woff');
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   background: linear-gradient(180deg, #11575c 0%,#3b8766 100%) no-repeat #3b8766;
   margin: 0px auto;
   font-size: 20px;
   font-family: 'Roboto Condensed';
+  overflow-y: auto;
 }
 
 .topbar {
